--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,15 +23,34 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+    
+  flutter_localizations:
+    sdk: flutter
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  intl: ^0.17.0
+  dartz: ^0.9.2
+  get_it: ^6.1.1
+  freezed: ^0.14.1+2
+  equatable: ^2.0.0
+  google_fonts: ^2.0.0
+  flutter_bloc: ^7.0.0
+  freezed_annotation: ^0.14.1
+  cached_network_image: ^3.0.0
+  shared_preferences: ^2.0.5
+  material_design_icons_flutter: ^4.0.5955
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  
+  build_runner: ^1.10.11
+  json_annotation: ^4.0.1
+  json_serializable: ^4.1.0
+  # intl_translation: ^0.17.10+1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -43,10 +62,15 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
+  generate: true
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/font/
+    - assets/svg/
+    - assets/icon/
+    - assets/image/
+    - assets/image/onboard/
+#   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
