✨ Add continue with signup screen. 🎨 Add app colors

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ flutter:
     - assets/font/
     - assets/svg/
     - assets/icon/
+    - assets/icon/signup/
     - assets/image/
     - assets/image/onboard/
 #   - images/a_dot_burr.jpeg
