--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,22 +34,35 @@ dependencies:
   intl: ^0.17.0
   dartz: ^0.9.2
   get_it: ^6.1.1
-  freezed: ^0.14.1+2
+  freezed: ^0.12.7
   equatable: ^2.0.0
   google_fonts: ^2.0.0
-  flutter_bloc: ^7.0.0
-  freezed_annotation: ^0.14.1
+  flutter_bloc: ^6.1.3
+  freezed_annotation: ^0.12.0
   cached_network_image: ^3.0.0
   shared_preferences: ^2.0.5
   material_design_icons_flutter: ^4.0.5955
+  
+  # Firebase packages
+  firebase_core: ^1.0.4
+  google_sign_in: ^5.0.2
+  firebase_auth: ^1.1.1
+  cloud_firestore: ^1.0.6
+  firebase_storage: ^8.0.4
+  firebase_messaging: ^9.1.2
+  firebase_analytics: ^8.0.1
+  flutter_twitter_login: ^1.1.0
+  flutter_facebook_auth: ^3.3.2+2
+  firebase_remote_config: ^0.10.0-dev.1
+  
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   
   build_runner: ^1.10.11
-  json_annotation: ^4.0.1
-  json_serializable: ^4.1.0
+  json_annotation: ^3.1.1
+  json_serializable: ^3.5.1
   # intl_translation: ^0.17.10+1
 
 # For information on the generic Dart part of this file, see the
