--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.10.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -34,6 +34,7 @@ dependencies:
   intl: ^0.17.0
   dartz: ^0.9.2
   get_it: ^6.1.1
+  logger: ^1.0.0
   freezed: ^0.12.7
   equatable: ^2.0.0
   google_fonts: ^2.0.0
@@ -79,7 +80,6 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/font/
-    - assets/svg/
     - assets/icon/
     - assets/icon/signup/
     - assets/image/
