--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,7 +53,7 @@ dependencies:
   firebase_messaging: ^9.1.2
   firebase_analytics: ^8.0.1
   flutter_twitter_login: ^1.1.0
-  flutter_facebook_auth: ^3.3.2+2
+  # flutter_facebook_auth: ^3.3.2+2
   firebase_remote_config: ^0.10.0-dev.1
   
 
