--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,17 +32,20 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   intl: ^0.17.0
+  logger: ^1.0.0
+  file_picker: ^3.0.1
+  image_picker: ^0.7.4
+  google_fonts: ^2.0.0
+  shared_preferences: ^2.0.5
+  cached_network_image: ^3.0.0
+  material_design_icons_flutter: ^4.0.5955
+
   dartz: ^0.9.2
   get_it: ^6.1.1
-  logger: ^1.0.0
   freezed: ^0.12.7
   equatable: ^2.0.0
-  google_fonts: ^2.0.0
   flutter_bloc: ^6.1.3
   freezed_annotation: ^0.12.0
-  cached_network_image: ^3.0.0
-  shared_preferences: ^2.0.5
-  material_design_icons_flutter: ^4.0.5955
   
   # Firebase packages
   firebase_core: ^1.0.4
