--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   file_picker: ^3.0.1
   image_picker: ^0.7.4
   google_fonts: ^2.0.0
+  modal_bottom_sheet: ^2.0.0
   shared_preferences: ^2.0.5
   cached_network_image: ^3.0.0
   material_design_icons_flutter: ^4.0.5955
