⚡️ Make compatible to run on flutter v3.0.4. ⬆️ upgrade dependencies 🚨 Fix lint warnings.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,11 @@
 {
     "cSpell.enableFiletypes": [
         "!yaml"
+    ],
+    "cSpell.words": [
+        "Commun",
+        "Signin",
+        "signup",
+        "textfield"
     ]
 }
