--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -23,10 +23,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-    
+
   flutter_localizations:
     sdk: flutter
-
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -35,8 +34,8 @@ dependencies:
   logger: ^1.1.0
   file_picker: ^4.1.1
   image_picker: ^0.8.4+2
-  google_fonts: ^2.1.0
-  modal_bottom_sheet: ^2.0.0
+  google_fonts: ^3.0.1
+  modal_bottom_sheet: ^2.1.0
   shared_preferences: ^2.0.8
   cached_network_image: ^3.1.0
   material_design_icons_flutter: ^5.0.5955-rc.1
@@ -44,31 +43,30 @@ dependencies:
   dartz: ^0.10.0
   get_it: ^7.2.0
   rxdart: ^0.27.2
-  freezed: ^0.14.5
+  freezed: ^2.0.5
   equatable: ^2.0.3
   flutter_bloc: ^8.0.1
-  freezed_annotation: ^0.14.3
-  
+  freezed_annotation: ^2.0.3
+
   # Firebase packages
   firebase_core: ^1.6.0
   google_sign_in: ^5.1.1
   firebase_auth: ^3.1.1
-  cloud_firestore: ^2.5.3
+  cloud_firestore: ^3.3.0
   firebase_storage: ^10.0.3
-  firebase_messaging: ^10.0.7
-  firebase_analytics: ^8.3.2
+  firebase_messaging: ^12.0.0
+  firebase_analytics: ^9.2.0
   twitter_login: ^4.0.1
   # flutter_facebook_auth: ^3.3.2+2
-  firebase_remote_config: ^0.11.0
-  
+  firebase_remote_config: ^2.0.12
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  
+
   build_runner: ^2.1.2
   json_annotation: ^4.1.0
-  json_serializable: ^5.0.2
+  json_serializable: ^6.3.1
   # intl_translation: ^0.17.10+1
 
 # For information on the generic Dart part of this file, see the
@@ -76,7 +74,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -91,30 +88,30 @@ flutter:
     - assets/image/
     - assets/image/onboard/
 #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+#   - images/a_dot_ham.jpeg
 
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware.
+# An image asset can refer to one or more resolution-specific "variants", see
+# https://flutter.dev/assets-and-images/#resolution-aware.
 
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
+# For details regarding adding assets from package dependencies, see
+# https://flutter.dev/assets-and-images/#from-packages
 
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
+# To add custom fonts to your application, add a fonts section here,
+# in this "flutter" section. Each entry in this list should have a
+# "family" key with the font family name, and a "fonts" key with a
+# list giving the asset and other descriptors for the font. For
+# example:
+# fonts:
+#   - family: Schyler
+#     fonts:
+#       - asset: fonts/Schyler-Regular.ttf
+#       - asset: fonts/Schyler-Italic.ttf
+#         style: italic
+#   - family: Trajan Pro
+#     fonts:
+#       - asset: fonts/TrajanPro.ttf
+#       - asset: fonts/TrajanPro_Bold.ttf
+#         weight: 700
+#
+# For details regarding fonts from package dependencies,
+# see https://flutter.dev/custom-fonts/#from-packages
