--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,13 +32,13 @@ dependencies:
   cupertino_icons: ^1.0.3
   intl: ^0.17.0
   logger: ^1.1.0
-  file_picker: ^4.1.1
+  file_picker: ^5.2.5
   image_picker: ^0.8.4+2
-  google_fonts: ^3.0.1
-  modal_bottom_sheet: ^2.1.0
+  google_fonts: ^4.0.3
+  modal_bottom_sheet: ^3.0.0-pre
   shared_preferences: ^2.0.8
   cached_network_image: ^3.1.0
-  material_design_icons_flutter: ^5.0.5955-rc.1
+  material_design_icons_flutter: ^6.0.7096
 
   dartz: ^0.10.0
   get_it: ^7.2.0
@@ -49,16 +49,16 @@ dependencies:
   freezed_annotation: ^2.0.3
 
   # Firebase packages
-  firebase_core: ^1.6.0
+  firebase_core: ^2.6.1
   google_sign_in: ^5.1.1
-  firebase_auth: ^3.1.1
-  cloud_firestore: ^3.3.0
-  firebase_storage: ^10.0.3
-  firebase_messaging: ^12.0.0
-  firebase_analytics: ^9.2.0
+  firebase_auth: ^4.2.8
+  cloud_firestore: ^4.4.2
+  firebase_storage: ^11.0.13
+  firebase_messaging: ^14.2.4
+  firebase_analytics: ^10.1.3
   twitter_login: ^4.0.1
   # flutter_facebook_auth: ^3.3.2+2
-  firebase_remote_config: ^2.0.12
+  firebase_remote_config: ^3.0.12
 
 dev_dependencies:
   flutter_test:
